Fixed password and textbox fields alignment

--- a/Orderista/MainStyleSheet.css
+++ b/Orderista/MainStyleSheet.css
@@ -126,6 +126,7 @@ footer {
     font-style: normal;
     font-variant: normal;
     text-transform: none;
+    width: 100%;
 }
 
 
